--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -315,7 +315,7 @@ header .intro-text .intro-heading {
     }
 
     header .intro-text .intro-heading {
-        margin-bottom: 50px;
+        margin-bottom: 0px;
         text-transform: uppercase;
         font-family: {{ site.data.template.font.primary }};
         font-size: 75px;
@@ -350,6 +350,7 @@ section h3.section-subheading {
 }
 
 .service-heading {
+    font-weight: 400;
     margin: 15px 0;
     text-transform: none;
 }
@@ -469,7 +470,7 @@ section h3.section-subheading {
     float: right;
     position: relative;
     width: 100%;
-    padding: 0 20px 0 100px;
+    padding: 0 20px 0 0px;
     text-align: left;
 }
 
@@ -509,7 +510,7 @@ section h3.section-subheading {
 
 .timeline>li.timeline-inverted>.timeline-panel {
     float: right;
-    padding: 0 20px 0 100px;
+    padding: 0 20px 0 0px;
     text-align: left;
 }
 
@@ -614,7 +615,7 @@ section h3.section-subheading {
     }
 
     .timeline>li .timeline-panel {
-        padding: 0 20px 20px 100px;
+        padding: 0 20px 20px 0;
     }
 
     .timeline>li .timeline-image {
@@ -628,7 +629,7 @@ section h3.section-subheading {
     }
 
     .timeline>li.timeline-inverted>.timeline-panel {
-        padding: 0 100px 20px 20px;
+        padding: 0 0 20px 20px;
     }
 }
 
