--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,14 +22,11 @@
                         <a class="page-scroll" href="#services">Über Townbee</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Team</a>
+                        <a class="page-scroll" href="#about">Meilensteine</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">Blog</a>
+                        <a class="page-scroll" href="#team">Team</a>
                     </li>
-                    <!-- <li>
-                        <a class="page-scroll" href="#team">Partner</a>
-                    </li> -->
                     <li>
                         <a class="page-scroll" href="#contact">Kontakt</a>
                     </li>
