--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,7 @@
                         <a class="page-scroll" href="#about">Meilensteine</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#team">Team</a>
+                        <a class="page-scroll" href="#portfolio">Team</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Kontakt</a>
