--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Meilensteine</h2>
-                    <h3 class="section-subheading text-muted">bzz</h3>
+                    <h3 class="section-subheading text-muted">woop woop</h3>
                 </div>
             </div>
             <div class="row">
