--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
     {% include header.html %}
     {% include services.html %}
     {% include about.html %}
-    {% include portfolio_grid.html %}
+    {% include team.html %}
     {% include clients.html %}
     {% include contact.html %}
     {% include footer.html %}
