Put header content in config

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -41,9 +41,9 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-heading">Townbee</div>
-                <div class="intro-lead-in">Bee the change</div>
-                <a href="#services" class="page-scroll btn btn-xl">Mehr erfahren</a>
+                <div class="intro-heading"> {{ site.title }} </div>
+                <div class="intro-lead-in"> {{ site.subtitle }} </div>
+                <a href="#services" class="page-scroll btn btn-xl"> {{ site.more_button }}</a>
             </div>
         </div>
     </header>
