--- a/_includes/team.html
+++ b/_includes/team.html
@@ -8,7 +8,7 @@
                 </div>
             </div>
             <div class="row">
-            {% for member in site.members %}
+            {% for member in site.team %}
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal{{ member.modal-id }}" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
