--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
     {% include services.html %}
     {% include about.html %}
     {% include team.html %}
-    {% include clients.html %}
+    {% include media.html %}
     {% include contact.html %}
     {% include footer.html %}
     {% include modals.html %}
