--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -1,5 +1,5 @@
  <!-- Portfolio Modals -->
- {% for member in site.members %}
+ {% for member in site.team %}
     <div class="portfolio-modal modal fade" id="portfolioModal{{ member.modal-id }}" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
