Remove contact form and add email (hidden in js)

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,9 +14,13 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline quicklinks">
-                        <li><a href="#">Privacy Policy</a>
-                        </li>
-                        <li><a href="#">Terms of Use</a>
+                        <li>
+                            <script language="JavaScript">
+                            var username = "townbee";
+                            var hostname = "muenchen.enactus.de";
+                            var linktext = username + "@" + hostname ;
+                            document.write("<a style=\"color:black\" href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>");
+                            </script>
                         </li>
                     </ul>
                 </div>
