--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
     {% include about.html %}
     {% include team.html %}
     {% include media.html %}
-    {% include contact.html %}
+    <!-- {% include contact.html %} -->
     {% include footer.html %}
     {% include modals.html %}
     {% include js.html %}
