Add 'bekannt aus' in front of media

--- a/_includes/media.html
+++ b/_includes/media.html
@@ -1,6 +1,7 @@
 <!-- Clients Aside -->
     <aside class="clients">
         <div class="container" >
+            <h3> Bekannt aus: </h3>
             <div class="row">
             {% for media in site.media %}
                 <div class="col-md-4 col-sm-6">
