--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -727,6 +727,7 @@ section#contact .text-danger {
 }
 
 footer {
+    background-color: rgba(253, 200, 43, 0.8);
     padding: 25px 0;
     text-align: center;
 }
