Add proper logo top left

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -176,7 +176,7 @@ fieldset[disabled] .btn-xl.active {
 
 .navbar-default {
     border-color: transparent;
-    background-color: #222;
+    background-color: #232D39;
 }
 
 .navbar-default .navbar-brand {
@@ -261,7 +261,7 @@ fieldset[disabled] .btn-xl.active {
 
     .navbar-default.navbar-shrink {
         padding: 10px 0;
-        background-color: #222;
+        background-color: #232D39;
     }
 
     .navbar-default.navbar-shrink .navbar-brand {
