--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">{{site.title}}</a>
+                <a class="navbar-brand page-scroll" href="#page-top" style="padding:0px"><img src="img/logo_alpha.png" style='max-height:100%;' alt="Townbee"></a>
+                <!-- <a class="navbar-brand page-scroll" href="#page-top">{{site.title}}</a> -->
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
