Implement Sonjas suggestions

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -31,11 +31,15 @@
                             </div>
                         </li>
                     {% endfor %}
+
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <h4>Werde
-                                    <br>Teil von
-                                    <br>Townbee!</h4>
+                                <script language="JavaScript">
+                                var username = "townbee";
+                                var hostname = "muenchen.enactus.de";
+                                var linktext = username + "@" + hostname ;
+                                document.write("<a style=\"color:black\" href='" + "mail" + "to:" + username + "@" + hostname + "?subject=Ich möchte mitmachen!'>" + "<h4>Werde <br> Teil von Townbee!</h4>" + "</a>");
+                                </script>
                             </div>
                         </li>
                     </ul>
