--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,7 +44,7 @@
             <div class="intro-text">
                 <div class="intro-heading"> {{ site.title }} </div>
                 <div class="intro-lead-in"> {{ site.subtitle }} </div>
-                <a href="#services" class="page-scroll btn btn-xl"> {{ site.more_button }}</a>
+                <!-- <a href="#services" class="page-scroll btn btn-xl"> {{ site.more_button }}</a> -->
             </div>
         </div>
     </header>
