--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,18 +1,22 @@
   <footer id='contact'>
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-2">
+                    <span class="copyright"> <a style="color:black; padding-right: 2em" href="https://enactus.de/muenchen/impressum/" target="_blank">Impressum</a> </span>
+                </div>
+                <div class="col-md-3">
                     <span class="copyright">Copyright &copy; {{ site.title }} {{ 'now' | date: "%Y" }}</span>
                 </div>
-                <div class="col-md-4">
+
+                <div class="col-md-2">
                     <ul class="list-inline social-buttons">
                         {% for network in site.social %}
-                        <li><a href="{{ network.url }}"><i class="fa fa-{{ network.title }}"></i></a>
+                        <li><a href="{{ network.url }}" target="_blank"><i class="fa fa-{{ network.title }}"></i></a>
                         </li>
                         {% endfor %}
                     </ul>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-5">
                     <ul class="list-inline quicklinks">
                         <li>
                             <script language="JavaScript">
@@ -23,6 +27,7 @@
                             </script>
                         </li>
                     </ul>
+                    <!-- <span class="copyright"><a style="color:black; padding-left:1em" href="https://enactus.de/muenchen/impressum/" target="_blank">Impressum</a></span> -->
                 </div>
             </div>
         </div>
