--- a/_includes/media.html
+++ b/_includes/media.html
@@ -1,5 +1,6 @@
 <!-- Clients Aside -->
-    <aside class="clients">
+<section class="bg-light-gray">
+    <aside class="clients" >
         <div class="container" >
             <h3> Bekannt aus: </h3>
             <div class="row">
@@ -13,3 +14,4 @@
             </div>
         </div>
     </aside>
+</section>
