--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
     {% include services.html %}
     {% include about.html %}
     {% include team.html %}
+    {% include spenden.html %}
     {% include media.html %}
     <!-- {% include contact.html %} -->
     {% include footer.html %}
