--- a/_includes/spenden.html
+++ b/_includes/spenden.html
@@ -1,8 +1,8 @@
 <section>
         <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Spenden</h2>
-                <h3 class="section-subheading text-muted"><div>Sie wollen uns bei unserem Projekt unterstützen?</div>
-                <div>Dann spenden Sie hier.</div>
+                <h3 class="section-subheading text-muted"><div>Vielen Dank, dass Sie unser Projekt mit einer Spende unterstützen möchten!</div>
+                <div>Wir glauben daran, dass wir gemeinsam etwas bewirken können.</div>
                     </h3>
             </div>
         <div align = "center"> 
