--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,6 +8,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top" style="padding:0px"><img src="img/logo_alpha.png" style='max-height:100%;' alt="Townbee"></a>
                 <!-- <a class="navbar-brand page-scroll" href="#page-top">{{site.title}}</a> -->
@@ -27,6 +28,9 @@
                     </li>
                     <li>
                         <a class="page-scroll" href="#portfolio">Team</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#spenden">Spenden</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Kontakt</a>
