--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,12 @@
   <footer id='contact'>
         <div class="container">
             <div class="row">
-                <div class="col-md-2">
+                <div class="col-md-1">
                     <span class="copyright"> <a style="color:black; padding-right: 2em" href="https://enactus.de/muenchen/impressum/" target="_blank">Impressum</a> </span>
                 </div>
+                <div class="col-md-1">
+                        <span class="copyright"> <a style="color:black; padding-right: 2em" href="/datenschutz" target="_blank">Datenschutz</a> </span>
+                    </div>
                 <div class="col-md-3">
                     <span class="copyright">Copyright &copy; {{ site.title }} {{ 'now' | date: "%Y" }}</span>
                 </div>
