--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,9 +8,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top" style="padding:0px"><img src="img/logo_alpha.png" style='max-height:100%;' alt="Townbee"></a>
+                <a class="navbar-brand page-scroll" href="#page-top" style="padding:0px"><img src="/img/logo_alpha.png" style='max-height:100%;' alt="Townbee"></a>
                 <!-- <a class="navbar-brand page-scroll" href="#page-top">{{site.title}}</a> -->
             </div>
 
@@ -21,16 +20,16 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Über Townbee</a>
+                        <a class="page-scroll" href="/services">Über Townbee</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">Meilensteine</a>
+                        <a class="page-scroll" href="/about">Meilensteine</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Team</a>
+                        <a class="page-scroll" href="/portfolio">Team</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#spenden">Spenden</a>
+                        <a class="page-scroll" href="/spenden">Spenden</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Kontakt</a>
