fix portfolio subview

--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -14,7 +14,7 @@
                         <div class="modal-body">
                             <h2>{{ member.title }}</h2>
                             <hr class="star-primary">
-                            <img src="img/team/{{ member.img }}" class="img-responsive img-centered" alt="{{ member.alt }}">
+                            <img src="/img/team/{{ member.img }}" class="img-responsive img-centered" alt="{{ member.alt }}">
                             <p>{{ member.description }}</p>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
