remove yellow color from kontakt navitem

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -226,17 +226,17 @@ fieldset[disabled] .btn-xl.active {
     color: #{{ site.data.template.color.primary }};
 }
 
-.navbar-default .navbar-nav>.active>a {
+/* .navbar-default .navbar-nav>.active>a {
     border-radius: 0;
     color: #fff;
     background-color: #{{ site.data.template.color.primary }};
-}
+} */
 
-.navbar-default .navbar-nav>.active>a:hover,
+/* .navbar-default .navbar-nav>.active>a:hover,
 .navbar-default .navbar-nav>.active>a:focus {
     color: #fff;
     background-color: #{{ site.data.template.color.secondary }};
-}
+} */
 
 @media(min-width:768px) {
     .navbar-default {
