--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,19 +20,19 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" id="services_button" href="/services">Über Townbee</a>
+                        <a id="services_button" href="/services">Über Townbee</a>
                     </li>
                     <li>
-                        <a class="page-scroll" id="about_button" href="/about">Meilensteine</a>
+                        <a id="about_button" href="/about">Meilensteine</a>
                     </li>
                     <li>
-                        <a class="page-scroll" id="portfolio_button" href="/portfolio">Team</a>
+                        <a id="portfolio_button" href="/portfolio">Team</a>
                     </li>
                     <li>
-                        <a class="page-scroll" id="spenden_button" href="/spenden">Spenden</a>
+                        <a id="spenden_button" href="/spenden">Spenden</a>
                     </li>
                     <li>
-                        <a class="page-scroll" id="contact_button" href="#contact">Kontakt</a>
+                        <a class="page-scroll" id="contact_button" style="background-color:transparent" href="#contact">Kontakt</a>
                     </li>
                 </ul>
             </div>
